--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "psi-09-web",
   "version": "1.0.0",
-  "description": "",
+  "description": "WhatsApp Web automation bot for PSI-09 roast backend",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
+    "axios": "^1.6.7",
+    "dotenv": "^16.3.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.31.0"
-  }
+    "whatsapp-web.js": "^1.23.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "author": "boneman",
+  "license": "MIT"
 }
