--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "psi-09-web",
   "version": "1.0.0",
-  "description": "WhatsApp Web automation bot for PSI-09 roast backend",
+  "description": "WhatsApp Web bot for PSI-09",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
+    "mongoose": "^7.6.1",
     "qrcode-terminal": "^0.12.0",
+    "wwebjs-mongo": "^1.2.0",
     "whatsapp-web.js": "^1.23.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "author": "boneman",
-  "license": "MIT"
+  }
 }
