--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "whatsapp-web.js": "^1.23.0",
+    "wwebjs-mongo": "^1.1.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mongoose": "^7.6.1",
-    "qrcode-terminal": "^0.12.0",
-    "wwebjs-mongo": "^1.2.0",
-    "whatsapp-web.js": "^1.23.0"
+    "qrcode-terminal": "^0.12.0"
   }
 }
