--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "psi-09-web",
   "version": "1.0.0",
-  "description": "WhatsApp Web bot for PSI-09",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.23.0",
+    "axios": "^1.6.8",
+    "whatsapp-web.js": "^1.21.1",
+    "qrcode-terminal": "^0.12.0",
     "wwebjs-mongo": "^1.1.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.6.1",
-    "qrcode-terminal": "^0.12.0"
+    "mongoose": "^8.3.2",
+    "dotenv": "^16.4.5"
   }
 }
+
