--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "psi-09-web",
   "version": "1.0.0",
+  "description": "WhatsApp automation for PSI-09 roastbot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "whatsapp-web.js": "^1.21.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.3.5",
     "qrcode-terminal": "^0.12.0",
     "wwebjs-mongo": "^1.1.0",
-    "mongoose": "^8.3.2",
-    "dotenv": "^16.4.5"
+    "whatsapp-web.js": "^1.23.0"
   }
 }
+
 
