--- a/render.yaml
+++ b/render.yaml
@@ -8,3 +8,7 @@ services:
     envVars:
       - key: PSI09_API_URL
         value: https://psi-09-roastbot.onrender.com/psi09
+      - key: MONGODB_URI
+        value: mongodb+srv://boneman7908:R5KG59dUYwYdgvSm@psi-09-web.m7bwnog.mongodb.net/?retryWrites=true&w=majority&appName=psi-09-web
+    autoDeploy: true
+    branch: main
