--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "psi-09-web",
+  "type": "module",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "whatsapp-web.js": "^1.21.0",
-    "wwebjs-mongo": "^1.1.0",
-    "mongoose": "^8.3.0",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "dotenv": "^17.2.0",
+    "playwright": "^1.44.0"
   }
 }
+
