--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,10 @@ services:
     name: psi-09-web
     env: node
     plan: free
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: |
+      npm install
+      npx playwright install chromium
+    startCommand: node server.js
     envVars:
       - key: PSI09_API_URL
         value: https://psi-09-roastbot.onrender.com/psi09
-
