--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "postinstall": "npx playwright install chromium",
+    "postinstall": "npx playwright install",
     "start": "node server.js"
   },
   "dependencies": {
