--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "psi-09-web",
-  "type": "module",
-  "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "postinstall": "npx playwright install",
+    "postinstall": "npx playwright install chromium",
     "start": "node server.js"
   },
+  "type": "module",
   "dependencies": {
-    "axios": "^1.6.8",
     "dotenv": "^17.2.0",
-    "playwright": "^1.44.0"
+    "playwright": "^1.43.0"
   }
 }
-
