--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "install:browsers": "npx playwright install chromium"
+    "postinstall": "npx playwright install chromium",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
