--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: psi-09-playwright-bot
-    env: node
-    buildCommand: npm install && npx playwright install chromium
+    name: playwright-whatsapp-bot
+    runtime: node
+    buildCommand: |
+      npm install
+      npx playwright install chromium
     startCommand: node server.js
     envVars:
-      - key: NODE_VERSION
-        value: 18
+      - key: NODE_ENV
+        value: production
