--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "postinstall": "npx playwright install chromium",
-    "start": "node server.js"
+    "start": "npx playwright install chromium && node server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
