--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,5 @@ services:
     plan: free
     buildCommand: |
       npm install
-      npx playwright install chromium
+      npx playwright install chromium --with-deps
     startCommand: node server.js
