--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "name": "psi-09-web",
   "version": "1.0.0",
-  "description": "Automated WhatsApp Web bot using Playwright and PSI-09 API",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "postinstall": "npx playwright install chromium",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npx playwright install chromium --with-deps"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^17.2.0",
-    "playwright": "^1.44.0"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "keywords": ["playwright", "whatsapp", "psi-09", "automation"],
-  "author": "sudoboneman",
-  "license": "MIT"
+    "playwright": "^1.44.1"
+  }
 }
