--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "psi-09-web",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Automated WhatsApp Web bot that talks to PSI-09 roastbot API",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "npx playwright install chromium"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^17.2.0",
-    "playwright": "^1.44.1"
+    "puppeteer": "^22.10.0"
   }
 }
