--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,13 @@
 services:
   - type: web
-    name: psi-09-web
-    env: node
+    name: psi09-whatsapp-bot
+    runtime: node
+    region: oregon
     plan: free
-    buildCommand: |
-      npm install
-      npx playwright install chromium
+    buildCommand: npm install
     startCommand: node server.js
+    autoDeploy: true
+    envVars:
+      - key: PSI09_API_URL
+        value: https://psi-09-roastbot.onrender.com/psi09
+
