--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "psi09-whatsapp-bot",
   "version": "1.0.0",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "postinstall": "npx puppeteer browsers install chrome --path=/opt/render/.cache/puppeteer",
     "start": "node server.js"
   },
   "dependencies": {
-    "puppeteer": "^22.10.0",
+    "axios": "^1.6.8",
+    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^17.2.0",
-    "axios": "^1.6.8"
+    "puppeteer-core": "^22.5.0"
   }
 }
