--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "axios": "^1.6.8",
     "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^17.2.0",
-    "puppeteer-core": "^22.5.0"
+    "puppeteer-core": "10.1.0"
   }
 }
