--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "puppeteer": "^22.5.0",
     "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^17.2.0",
-    "puppeteer-core": "10.1.0"
+    "axios": "^1.6.7"
   }
 }
