--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
     name: psi09-whatsapp-bot
-    env: node
-    buildCommand: |
-      npm install
-      npx puppeteer browsers install chrome
-    startCommand: node server.js
-    plan: free
+    runtime: node
+    buildCommand: npm install
+    startCommand: npm start
+    envVars:
+      - key: PSI09_API_URL
+        value: https://psi-09-roastbot.onrender.com/psi09
