--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "psi09-whatsapp-bot",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^17.2.0",
+    "express": "^4.19.2",
     "whatsapp-web.js": "^1.23.0"
   }
 }
